sc/qa/unit/ucalc.hxx
@@ -466,6 +466,7 @@ public:
     void testCopyPasteFormulas();
     void testCopyPasteFormulasExternalDoc();
     void testCopyPasteReferencesExternalDoc(); // tdf#106456
+    void testTdf71058();
 
     void testFindAreaPosVertical();
     void testFindAreaPosColRight();
@@ -802,6 +803,7 @@ public:
     CPPUNIT_TEST(testCopyPasteFormulas);
     CPPUNIT_TEST(testCopyPasteFormulasExternalDoc);
     CPPUNIT_TEST(testCopyPasteReferencesExternalDoc);
+    CPPUNIT_TEST(testTdf71058);
     CPPUNIT_TEST(testFindAreaPosVertical);
     CPPUNIT_TEST(testFindAreaPosColRight);
     CPPUNIT_TEST(testSort);
